# project-template

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.md.template  CLAUDE.md  LICENSE  Makefile  README.md  TEMPLATE_SYNC.md  pyproject.toml
.claude/: mcp-registry.json  settings-presets.json  settings.json  settings.json.template  statusline.sh  work-log.md
.claude/agents/: architect.md  build-resolver.md  code-reviewer.md  database-reviewer.md  doc-updater.md  e2e-runner.md  go-build-resolver.md  go-reviewer.md  observer.md  planner.md  python-reviewer.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
.claude/commands/: brainstorm.md  build-fix.md  changelog.md  checkpoint.md  code-review.md  commit.md  e2e.md  eval.md  evolve.md  generate-tests.md  github-sync.md  go-build.md  go-review.md  go-test.md  health.md  instinct-export.md  instinct-import.md  instinct-status.md  learn.md  lint.md  mcps.md  multi-backend.md  multi-execute.md  multi-frontend.md  multi-plan.md  multi-workflow.md  optimize.md  orchestrate.md  phase-check.md  plan.md  plugins.md  pr.md  prd-generate.md  prd.md  python-review.md  refactor-clean.md  research.md  rollback.md  security-audit.md  sessions.md  (+11 more)
.claude/contexts/: dev.md  research.md  review.md
.claude/examples/: mcp-config-example.json  multi-model-config.json
.claude/hooks/: README.md  build-analysis.sh  console-log-audit.sh  dev-server-blocker.sh  doc-file-blocker.sh  long-running-tmux-hint.sh  observe.sh  pattern-extraction.sh  post-edit-format.sh  pr-url-extract.sh  pre-commit-check.sh  pre-compact.sh  project-index.sh  protect-sensitive-files.sh  session-end.sh  session-init.sh  session-summary.sh  settings-example.json  suggest-compact.sh  typescript-check.sh
.claude/instincts/: README.md  config.json  example.json
.claude/plugins/: registry.json
.claude/rules/: claude-behavior.md  (+9 more)
.taskmaster/: config.json  state.json
docs/: CHAT_SCRIPTS.md  DOGFOOD_CHECKLIST.md  DOGFOOD_HISTORY.md  ECC_COMPARISON.md  ECC_INTEGRATION.md  GOALS.md  GUARDRAILS.md  HOOKS.md  MCP_SETUP.md  MEETING_RECAP_TEMPLATE.md  ONBOARDING.md  PLUGINS.md  SECURITY.md  SESSION_HANDOFF_ORCHESTRATE_FIX.md  SESSION_HANDOFF_ROADMAP.md  TASKMASTER_MODELS.md  TEMPLATE_OVERLAY_FRICTION.md  TEMPLATE_OVERVIEW.md  TEST2_CONTINUOUS_LEARNING_PROMPT.md  TEST3_ORCHESTRATION_EVAL_PROMPT.md  WORKFLOW.md
examples/: mcp.json.example
research-documents/: README.md
scripts/: check-upstream.sh  init-project.sh  instinct-cli.py  manage-mcps.sh  manage-plugins.sh  multi-model-query.py  setup-preset.sh  smoke-test.sh  start-observer.sh  sync-template.sh
(+67 files in other folders)
