[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "__project_package__"
version = "0.0.0"
description = """One-line summary."""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "__AUTHOR__", email = "team@example.com" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["black", "isort", "ruff", "pytest", "pre-commit", "nbstripout", "build"]

[tool.hatch.build.targets.wheel]
packages = ["src/__project_package__"]
