[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "__project_package__"
version = "0.0.0"
description = """One-line summary."""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "__AUTHOR__", email = "team@example.com" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov", "pre-commit", "mypy", "build"]

[tool.hatch.build.targets.wheel]
packages = ["src/__project_package__"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
